z-index fix

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -25,7 +25,7 @@
   .tab-bar-container {
     top: 78px;
     position: fixed;
-    z-index: 99;
+    z-index: 999999;
     background: #121212;
     left: 0;
     right: 0;
